<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/converterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/converterImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/converterLabel"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/thermometer_image"
        android:cropToPadding="false"
        android:padding="10dp"
        android:src="@drawable/thermometer"/>

    <EditText
        android:id="@+id/temperatureEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/converterImage"
        android:layout_centerHorizontal="true"
        android:hint="@string/temperature_value"
        android:inputType="numberDecimal|numberSigned"/>

    <TextView
        android:id="@+id/input_temperature_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureEdit"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_temperature_validation"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/cToFRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cToF"/>

        <RadioButton
            android:id="@+id/fToCRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fToC"/>
    </RadioGroup>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/convert"/>

    <View
        android:id="@+id/line_break"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/convertButton"
        android:layout_margin="10dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_break"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</RelativeLayout>
